// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui-elements-basic Components GroupedInputs should render with default state 1`] = `
.c1 {
  min-height: 28px;
  border-left: solid 1px #divider;
  margin: auto 1px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: auto;
  height: auto;
  color: #text;
  border: none;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0.c0 label {
  word-break: normal;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.c0 label:first-child {
  width: 50%;
}

.c0 label:last-child {
  width: 50%;
}

.c0 input {
  box-shadow: none;
  background-color: transparent;
}

.c0 div.groupBox {
  width: 100%;
  height: auto;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: 0 1px 3px 0 #shadow;
  background-color: #foreground;
}

.c0 .groupBox>input:first-child {
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
}

.c0 .groupBox>input:last-child {
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
}

.c0 .groupBox>div:last-child {
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
}

<div
  className="c0"
>
  test
  test
  <div
    className="groupBox"
  >
    <input
      type="text"
    />
    <div
      className="c1"
    />
    <input
      type="text"
    />
  </div>
</div>
`;

exports[`ui-elements-basic Components GroupedInputs should render with provided ratio 1`] = `
.c1 {
  min-height: 28px;
  border-left: solid 1px #divider;
  margin: auto 1px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: auto;
  height: auto;
  color: #text;
  border: none;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0.c0 label {
  word-break: normal;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.c0 label:first-child {
  width: 30%;
}

.c0 label:last-child {
  width: 70%;
}

.c0 input {
  box-shadow: none;
  background-color: transparent;
}

.c0 div.groupBox {
  width: 100%;
  height: auto;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: 0 1px 3px 0 #shadow;
  background-color: #foreground;
}

.c0 .groupBox>input:first-child {
  -webkit-flex-basis: 30%;
  -ms-flex-preferred-size: 30%;
  flex-basis: 30%;
}

.c0 .groupBox>input:last-child {
  -webkit-flex-basis: 70%;
  -ms-flex-preferred-size: 70%;
  flex-basis: 70%;
}

.c0 .groupBox>div:last-child {
  -webkit-flex-basis: 70%;
  -ms-flex-preferred-size: 70%;
  flex-basis: 70%;
}

<div
  className="c0"
>
  test
  test
  <div
    className="groupBox"
  >
    <input
      type="text"
    />
    <div
      className="c1"
    />
    <input
      type="text"
    />
  </div>
</div>
`;
